src/styles/global.css
@import url("https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Slab:wght@100..900&family=Varela+Round&display=swap");
@import "tailwindcss";
@import "@catppuccin/tailwindcss/mocha.css";

@plugin "daisyui" {
  themes: kanary-night --prefers-dark, kanary-day --default;
}

@plugin "@iconify/tailwind4" {
  prefixes: basil, hugeicons, mingcute;
}

@custom-variant light (&:where([data-theme=kanary-day], [data-theme=kanary-day] *));
@custom-variant dark (&:where([data-theme=kanary-night], [data-theme=kanary-night] *));

@theme {
  --animate-wiggle: wiggle 1s ease-in-out infinite;
  --animate-blink: blink 2s step-end infinite;
  --font-cherry-bomb-one: "Cherry Bomb One", system-ui;
  --font-roboto-slab: "Roboto Slab", serif;
  --font-varela-round: "Varela Round", sans-serif;
  --font-inter: "Inter", sans-serif;
}

[data-theme] {
  --radius-selector: 1rem;
  --radius-field: 0.25rem;
  --radius-box: 0.5rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 1px;
  --depth: 1;
  --noise: 0;
}

@plugin "daisyui/theme" {
  name: "kanary-day";
  default: true;
  prefersdark: false;
  color-scheme: light;

  --color-base-100: var(--catppuccin-color-base);
  --color-base-200: var(--catppuccin-color-mantle);
  --color-base-300: var(--catppuccin-color-crust);
  --color-base-content: var(--catppuccin-color-text);
  --color-primary: var(--catppuccin-color-sapphire);
  --color-primary-content: var(--catppuccin-color-base);
  --color-secondary: var(--catppuccin-color-lavender);
  --color-secondary-content: var(--catppuccin-color-base);
  --color-accent: var(--catppuccin-color-pink);
  --color-accent-content: var(--catppuccin-color-base);
  --color-neutral: var(--catppuccin-color-surface1);
  --color-neutral-content: var(--catppuccin-color-text);
  --color-info: var(--catppuccin-color-sky);
  --color-info-content: var(--catppuccin-color-base);
  --color-success: var(--catppuccin-color-green);
  --color-success-content: var(--catppuccin-color-base);
  --color-warning: var(--catppuccin-color-peach);
  --color-warning-content: var(--catppuccin-color-base);
  --color-error: var(--catppuccin-color-red-600);
  --color-error-content: var(--catppuccin-color-base);

  --color-row-blue: var(--catppuccin-color-blue);
  --color-row-red: var(--catppuccin-color-red);
  --color-row-yellow: var(--catppuccin-color-yellow);
  --color-row-green: var(--catppuccin-color-green);
  --color-row-purple: var(--catppuccin-color-mauve);
  --color-row-grey: var(--catppuccin-color-overlay2);
}

@plugin "daisyui/theme" {
  name: "kanary-night";
  default: false;
  prefersdark: true;
  color-scheme: dark;

  --color-base-100: var(--catppuccin-color-base);
  --color-base-200: var(--catppuccin-color-mantle);
  --color-base-300: var(--catppuccin-color-crust);
  --color-base-content: var(--catppuccin-color-text);
  --color-primary: var(--catppuccin-color-sapphire);
  --color-primary-content: var(--catppuccin-color-base);
  --color-secondary: var(--catppuccin-color-lavender);
  --color-secondary-content: var(--catppuccin-color-base);
  --color-accent: var(--catppuccin-color-pink);
  --color-accent-content: var(--catppuccin-color-base);
  --color-neutral: var(--catppuccin-color-surface1);
  --color-neutral-content: var(--catppuccin-color-text);
  --color-info: var(--catppuccin-color-sky);
  --color-info-content: var(--catppuccin-color-base);
  --color-success: var(--catppuccin-color-green);
  --color-success-content: var(--catppuccin-color-base);
  --color-warning: var(--catppuccin-color-peach);
  --color-warning-content: var(--catppuccin-color-base);
  --color-error: var(--catppuccin-color-red-600);
  --color-error-content: var(--catppuccin-color-base);

  --color-row-blue: var(--catppuccin-color-blue);
  --color-row-red: var(--catppuccin-color-red);
  --color-row-yellow: var(--catppuccin-color-yellow);
  --color-row-green: var(--catppuccin-color-green);
  --color-row-purple: var(--catppuccin-color-mauve);
  --color-row-grey: var(--catppuccin-color-overlay2);
}

@keyframes blink {
  50% {
    opacity: 0;
  }
}

@layer utilities {
  .fake-cursor {
    transition: opacity 0.1s;
  }
  input:not(:placeholder-shown) ~ .fake-cursor,
  input:focus ~ .fake-cursor {
    opacity: 0;
  }

  body {
    font-family: var(--font-inter);
    font-optical-sizing: auto;
    font-weight: 300;
    font-style: normal;
  }

  h1, h2, h3, h4, h5 {
    font-family: var(--font-varela-round);
    font-weight: 400;
    font-style: normal;
  }

  .display-table {
    display: table;
  }

  .btn {
    font-family: var(--font-varela-round);
  }

  .font-logo {
    font-family:
      var(--font-cherry-bomb-one), cursive;
  }
  .list li, input, .btn {
    @apply rounded-sm;
  }
  .list li {
    border-width: 0;
  }
  p a {
    color: var(--color-secondary);
    font-weight: var(--font-weight-bold);
    text-decoration: underline;
  }
  .btn.join-item {
    @apply rounded-none;
  }
  .bg-neutral-light-20 {
    background-color: color-mix(in oklab, var(--color-neutral) 90%, white 10%);
  }
  .row-color-tint {
    background-color: color-mix(
      in srgb,
      var(--row-tint-color) 13%,
      transparent
    );
  }
  [data-theme="day"] .row-color-tint {
    background-color: color-mix(
      in srgb,
      var(--row-tint-color) 35%,
      transparent
    );
  }
}

